--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="mega-box">
             <div class="content">
               <div class="row">
-                <img src="./images/woman.jpg" alt="" />
+                <img src="./images/eleve devant ordi.png" alt="" />
               </div>
               <div class="row">
                 <header>Aménagement de la boutique</header>
@@ -70,15 +70,9 @@
         </li>
         <li><a href="">Blog</a></li>
         <li>
-<<<<<<< HEAD
           <a href="" class="desktop-item">fournisseurs <span><i class="fas fa-chevron-down"></i></span></a>
           <input type="checkbox" id="showdrop1" />
           <label for="showdrop1" class="mobile-item">fournisseurs <span><i class="fas fa-chevron-down"></i></span></label>
-=======
-          <a href="" class="desktop-item">Vendeurs(euse) <span><i class="fas fa-chevron-down"></i></span></a>
-          <input type="checkbox" id="showdrop1" />
-          <label for="showdrop1" class="mobile-item">Vendeurs(euse) <span><i class="fas fa-chevron-down"></i></span></label>
->>>>>>> 0529a10c296ee19a235e1b7e4175546c3ad24e03
           <ul class="drop-menu1">
             <li><a href="">Listes des magasins des fournisseurs</a></li>
             <li><a href="">Détails du magasin</a></li>
@@ -171,15 +165,9 @@
       </div>
 
       <div class="promotion-item">
-<<<<<<< HEAD
         <img src="./images/vdj.jpg" alt="" />
         <div class="promotion-content">
           <h3>VOIX DES JEUNES SCHOOL</h3>
-=======
-        <img src="./images/promo6.jpg" alt="" />
-        <div class="promotion-content">
-          <h3>WATCHES</h3>
->>>>>>> 0529a10c296ee19a235e1b7e4175546c3ad24e03
           <a href="">PARTICIPEZ</a>
         </div>
       </div>
@@ -196,11 +184,7 @@
     <div class="product-layout">
       <div class="product">
         <div class="img-container">
-<<<<<<< HEAD
           <img src="./images/trousse.jpg" alt="" />
-=======
-          <img src="./images/product1.jpg" alt="" />
->>>>>>> 0529a10c296ee19a235e1b7e4175546c3ad24e03
           <div class="addCart">
             <i class="fas fa-shopping-cart"></i>
           </div>
@@ -212,26 +196,16 @@
           </ul>
         </div>
         <div class="bottom">
-<<<<<<< HEAD
           <a href="">Trousse Réciclable</a>
           <div class="price">
             <span>500 fcfa</span>
-=======
-          <a href="">Bambi Print Mini Backpack</a>
-          <div class="price">
-            <span>$150</span>
->>>>>>> 0529a10c296ee19a235e1b7e4175546c3ad24e03
           </div>
         </div>
       </div>
 
       <div class="product">
         <div class="img-container">
-<<<<<<< HEAD
           <img src="./images/cache nez.jpg" alt="" />
-=======
-          <img src="./images/product2.jpg" alt="" />
->>>>>>> 0529a10c296ee19a235e1b7e4175546c3ad24e03
           <div class="addCart">
             <i class="fas fa-shopping-cart"></i>
           </div>
@@ -243,28 +217,17 @@
           </ul>
         </div>
         <div class="bottom">
-<<<<<<< HEAD
           <a href="">Cache Nez (fille & garçon)</a>
           <div class="price">
             <span>250 fcfa</span>
             <span class="cancel">500 fcfa</span>
-=======
-          <a href="">Bambi Print Mini Backpack</a>
-          <div class="price">
-            <span>$150</span>
-            <span class="cancel">$160</span>
->>>>>>> 0529a10c296ee19a235e1b7e4175546c3ad24e03
           </div>
         </div>
       </div>
 
       <div class="product">
         <div class="img-container">
-<<<<<<< HEAD
           <img src="./images/savon liquide.jpg" alt="" />
-=======
-          <img src="./images/product3.jpg" alt="" />
->>>>>>> 0529a10c296ee19a235e1b7e4175546c3ad24e03
           <div class="addCart">
             <i class="fas fa-shopping-cart"></i>
           </div>
@@ -276,26 +239,16 @@
           </ul>
         </div>
         <div class="bottom">
-<<<<<<< HEAD
           <a href="">Savon liquide</a>
           <div class="price">
             <span>500 fcfa</span>
-=======
-          <a href="">Bambi Print Mini Backpack</a>
-          <div class="price">
-            <span>$150</span>
->>>>>>> 0529a10c296ee19a235e1b7e4175546c3ad24e03
           </div>
         </div>
       </div>
 
       <div class="product">
         <div class="img-container">
-<<<<<<< HEAD
           <img src="./images/oeufs africain.jpg" alt="" />
-=======
-          <img src="./images/product4.jpg" alt="" />
->>>>>>> 0529a10c296ee19a235e1b7e4175546c3ad24e03
           <div class="addCart">
             <i class="fas fa-shopping-cart"></i>
           </div>
@@ -307,28 +260,17 @@
           </ul>
         </div>
         <div class="bottom">
-<<<<<<< HEAD
           <a href="">Oeufs Africain</a>
           <div class="price">
             <span>150 fcfa</span>
             <span class="cancel">200 fcfa</span>
-=======
-          <a href="">Bambi Print Mini Backpack</a>
-          <div class="price">
-            <span>$150</span>
-            <span class="cancel">$160</span>
->>>>>>> 0529a10c296ee19a235e1b7e4175546c3ad24e03
           </div>
         </div>
       </div>
 
       <div class="product">
         <div class="img-container">
-<<<<<<< HEAD
           <img src="./images/pavet.jpg" alt="" />
-=======
-          <img src="./images/product5.jpg" alt="" />
->>>>>>> 0529a10c296ee19a235e1b7e4175546c3ad24e03
           <div class="addCart">
             <i class="fas fa-shopping-cart"></i>
           </div>
@@ -340,26 +282,16 @@
           </ul>
         </div>
         <div class="bottom">
-<<<<<<< HEAD
           <a href="">Pavet Reciclable</a>
           <div class="price">
             <span>5000 fcfa/km°2</span>
-=======
-          <a href="">Bambi Print Mini Backpack</a>
-          <div class="price">
-            <span>$150</span>
->>>>>>> 0529a10c296ee19a235e1b7e4175546c3ad24e03
           </div>
         </div>
       </div>
 
       <div class="product">
         <div class="img-container">
-<<<<<<< HEAD
           <img src="./images/plante.jpg" alt="" />
-=======
-          <img src="./images/product6.jpg" alt="" />
->>>>>>> 0529a10c296ee19a235e1b7e4175546c3ad24e03
           <div class="addCart">
             <i class="fas fa-shopping-cart"></i>
           </div>
@@ -371,17 +303,10 @@
           </ul>
         </div>
         <div class="bottom">
-<<<<<<< HEAD
           <a href="">Plante (fleur & potager etc...)</a>
 
           <div class="price">
             <span>5000 fcfa/km°2</span>
-=======
-          <a href="">Bambi Print Mini Backpack</a>
-
-          <div class="price">
-            <span>$150</span>
->>>>>>> 0529a10c296ee19a235e1b7e4175546c3ad24e03
           </div>
         </div>
       </div>
@@ -501,7 +426,6 @@
     <div class="container">
       <div class="footer-container">
         <div class="footer-center">
-<<<<<<< HEAD
           <h3>SUPPLÉMENTS</h3>
           <a href="#">les partenaires</a>
           <a href="#">Certificats-cadeaux</a>
@@ -524,30 +448,6 @@
           <a href="#">Liste de souhaits</a>
           <a href="#">Bulletin</a>
           <a href="#">Retour</a>
-=======
-          <h3>EXTRAS</h3>
-          <a href="#">Brands</a>
-          <a href="#">Gift Certificates</a>
-          <a href="#">Affiliate</a>
-          <a href="#">Specials</a>
-          <a href="#">Site Map</a>
-        </div>
-        <div class="footer-center">
-          <h3>INFORMATION</h3>
-          <a href="#">About Us</a>
-          <a href="#">Privacy Policy</a>
-          <a href="#">Terms & Conditions</a>
-          <a href="#">Contact Us</a>
-          <a href="#">Site Map</a>
-        </div>
-        <div class="footer-center">
-          <h3>MY ACCOUNT</h3>
-          <a href="#">My Account</a>
-          <a href="#">Order History</a>
-          <a href="#">Wish List</a>
-          <a href="#">Newsletter</a>
-          <a href="#">Returns</a>
->>>>>>> 0529a10c296ee19a235e1b7e4175546c3ad24e03
         </div>
         <div class="footer-center">
           <h3>CONTACTER-NOUS</h3>
