--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 
       <div class="product">
         <div class="img-container">
-          <img src="./images/product7.jpg" alt="" />
+          <img src="./images/aracchide.jpg" alt="" />
           <div class="addCart">
             <i class="fas fa-shopping-cart"></i>
           </div>
@@ -325,18 +325,18 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Bambi Print Mini Backpack</a>
+          <a href="">Arachide</a>
 
           <div class="price">
-            <span>$150</span>
-            <span class="cancel">$160</span>
+            <span>100 fcfa/sachet</span>
+            <span class="cancel">200 fcfa/sachet</span>
           </div>
         </div>
       </div>
 
       <div class="product">
         <div class="img-container">
-          <img src="./images/product8.jpg" alt="" />
+          <img src="./images/feuilles d'oignon.jpg" alt="" />
           <div class="addCart">
             <i class="fas fa-shopping-cart"></i>
           </div>
@@ -348,10 +348,10 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Bambi Print Mini Backpack</a>
+          <a href="">feuilles d'oignon</a>
           <div class="price">
-            <span>$150</span>
-            <span class="cancel">$160</span>
+            <span>500 fcfa/kilko</span>
+            <span class="cancel">600 fcfa/kilo</span>
           </div>
         </div>
       </div>
@@ -362,19 +362,19 @@
   <section class="section advert">
     <div class="advert-layout container">
       <div class="item ">
-        <img src="./images/promo7.jpg" alt="">
+        <img src="./images/saison.jpg" alt="">
         <div class="content left">
-          <span>Exclusive Sales</span>
-          <h3>Spring Collections</h3>
-          <a href="">View Collection</a>
+          <span>Ventes exclusives</span>
+          <h3>Collections de saison</h3>
+          <a href="">Voir la collection</a>
         </div>
       </div>
       <div class="item">
-        <img src="./images/promo8.jpg" alt="">
+        <img src="./images/salon des createurs.jpg" alt="">
         <div class="content  right">
-          <span>New Trending</span>
-          <h3>Designer Bags</h3>
-          <a href="">Shop Now </a>
+          <span>Nouvelle sortir</span>
+          <h3>Salon des créateurs</h3>
+          <a href="">Accéder maintenant </a>
         </div>
       </div>
     </div>
