--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- Custom StyleSheet -->
   <link rel="stylesheet" href="./styles.css" />
-  <title>JELMPB - Ecommerce Website</title>
+  <title>JELMPB - Ecommerce Website Restez chez vous, Rendez Vous Dans Votre Boutique En Ligne! Achetez en ligne tous les produits Essentiels ✔ Supermarché, Produits de nettoyage, Produits Scolaire, Pavet, Matériels ou Outils D'ecoles et plus encore ✔ Toutes les marques à petits prix...! ✈ Livraison rapide partout à Abidjan... ✔ Paiement à la livraison</title>
 </head>
 
 <body>
@@ -186,7 +186,7 @@
         <div class="img-container">
           <img src="./images/trousse.jpg" alt="" />
           <div class="addCart">
-            <i class="fas fa-shopping-cart"></i>
+            <a href="trousse.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -207,7 +207,7 @@
         <div class="img-container">
           <img src="./images/cache nez.jpg" alt="" />
           <div class="addCart">
-            <i class="fas fa-shopping-cart"></i>
+            <a href="productDetails 1.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -229,7 +229,7 @@
         <div class="img-container">
           <img src="./images/savon liquide.jpg" alt="" />
           <div class="addCart">
-            <i class="fas fa-shopping-cart"></i>
+            <a href="productDetails.html" class="section-2"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -250,7 +250,7 @@
         <div class="img-container">
           <img src="./images/oeufs africain.jpg" alt="" />
           <div class="addCart">
-            <i class="fas fa-shopping-cart"></i>
+            <a href="productDetails.html" class="section-3"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -272,7 +272,7 @@
         <div class="img-container">
           <img src="./images/pavet.jpg" alt="" />
           <div class="addCart">
-            <i class="fas fa-shopping-cart"></i>
+            <a href="productDetails.html" class="section-4"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -293,7 +293,7 @@
         <div class="img-container">
           <img src="./images/plante.jpg" alt="" />
           <div class="addCart">
-            <i class="fas fa-shopping-cart"></i>
+            <a href="productDetails.html" class=""><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
