--- a/products.html
+++ b/products.html
@@ -12,7 +12,7 @@
 
   <!-- Custom StyleSheet -->
   <link rel="stylesheet" href="./styles.css" />
-  <title>JELMPB - Ecommerce Website</title>
+  <title>JELMPB - Ecommerce Website Restez chez vous, les produits, fait vos choix, produits 100% reciclable, Rendez Vous Dans Votre Boutique En Ligne! Achetez en ligne tous les produits Essentiels ✔ Supermarché, Produits de nettoyage, Produits Scolaire, Jeux Educative, Pavet, Matériels ou Outils D'ecoles et plus encore ✔ Toutes les marques à petits prix...! ✈ Livraison rapide partout à Abidjan... ✔ Paiement à la livraison</title>
 </head>
 
 <body>
