--- a/arachide.html
+++ b/arachide.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8" />
@@ -11,7 +11,7 @@
 
   <!-- Custom StyleSheet -->
   <link rel="stylesheet" href="./styles.css" />
-  <title>JELMPB - Ecommerce Website</title>
+  <title>JELMPB - Ecommerce Website,détailler, détaillez et Restez chez vous, les produits, fait vos choix, produits 100% reciclable, Rendez Vous Dans Votre Boutique En Ligne! Achetez en ligne tous les produits Essentiels ✔ Supermarché, Produits de nettoyage, Produits Scolaire, Jeux Educative, Pavet, Matériels ou Outils D'ecoles et plus encore ✔ Toutes les marques à petits prix...! ✈ Livraison rapide partout à Abidjan... ✔ Paiement à la livraison</title>
 </head>
 
 <body>
@@ -24,42 +24,42 @@
         <div class="top">
           <label for="" class="btn close-btn"><i class="fas fa-times"></i></label>
         </div>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="products.html">Products</a></li>
+        <li><a href="index.html">Domicile</a></li>
+        <li><a href="products.html">Des produits</a></li>
         <li>
-          <a href="" class="desktop-item">Shop <span><i class="fas fa-chevron-down"></i></span></a>
+          <a href="" class="desktop-item">Boutique <span><i class="fas fa-chevron-down"></i></span></a>
           <input type="checkbox" id="showMega" />
-          <label for="showMega" class="mobile-item">Shop <span><i class="fas fa-chevron-down"></i></span></label>
+          <label for="showMega" class="mobile-item">Boutique <span><i class="fas fa-chevron-down"></i></span></label>
           <div class="mega-box">
             <div class="content">
               <div class="row">
-                <img src="./images/woman.jpg" alt="" />
+                <img src="./images/eleve devant ordi.png" alt="" />
               </div>
               <div class="row">
-                <header>Shop Layout</header>
+                <header>Aménagement de la boutique</header>
                 <ul class="mega-links">
-                  <li><a href="#">Shop With Background</a></li>
-                  <li><a href="#">Shop Mini Categories</a></li>
-                  <li><a href="#">Shop Only Categories</a></li>
-                  <li><a href="#">Shop Icon Categories</a></li>
+                  <li><a href="#">Boutique avec arrière-plan</a></li>
+                  <li><a href="#">Magasiner les mini catégories</a></li>
+                  <li><a href="#">Magasiner uniquement les catégories</a></li>
+                  <li><a href="#">Catégories d'icônes de la boutique</a></li>
                 </ul>
               </div>
               <div class="row">
-                <header>Filter Layout</header>
+                <header>Disposition du filtre</header>
                 <ul class="mega-links">
-                  <li><a href="#">Sidebar</a></li>
-                  <li><a href="#">Filter Default</a></li>
-                  <li><a href="#">Filter Drawer</a></li>
-                  <li><a href="#">Filter Dropdown</a></li>
+                  <li><a href="#">Barre latérale</a></li>
+                  <li><a href="#">Filtre par défaut</a></li>
+                  <li><a href="#">Tiroir de filtre</a></li>
+                  <li><a href="#">Liste déroulante des filtres</a></li>
                 </ul>
               </div>
               <div class="row">
-                <header>Product Layout</header>
+                <header>Présentation du produit</header>
                 <ul class="mega-links">
-                  <li><a href="#">Layout Zoom</a></li>
-                  <li><a href="#">Layout Sticky</a></li>
-                  <li><a href="#">Layout Sticky 2</a></li>
-                  <li><a href="#">Layout Scroll</a></li>
+                  <li><a href="#">Zoom sur la mise en page</a></li>
+                  <li><a href="#">Mise en page collante</a></li>
+                  <li><a href="#">Mise en page collante 2</a></li>
+                  <li><a href="#">Défilement de mise en page</a></li>
                 </ul>
               </div>
             </div>
@@ -67,12 +67,12 @@
         </li>
         <li><a href="">Blog</a></li>
         <li>
-          <a href="" class="desktop-item">Vendors <span><i class="fas fa-chevron-down"></i></span></a>
+          <a href="" class="desktop-item">fournisseurs <span><i class="fas fa-chevron-down"></i></span></a>
           <input type="checkbox" id="showdrop1" />
-          <label for="showdrop1" class="mobile-item">Vendors <span><i class="fas fa-chevron-down"></i></span></label>
+          <label for="showdrop1" class="mobile-item">fournisseurs <span><i class="fas fa-chevron-down"></i></span></label>
           <ul class="drop-menu1">
-            <li><a href="">Vendor Store listings</a></li>
-            <li><a href="">Store Details</a></li>
+            <li><a href="">Listes des magasins des fournisseurs</a></li>
+            <li><a href="">Détails du magasin</a></li>
           </ul>
         </li>
 
@@ -81,7 +81,7 @@
           <input type="checkbox" id="showdrop2" />
           <label for="showdrop2" class="mobile-item">Page <span><i class="fas fa-chevron-down"></i></span></label>
           <ul class="drop-menu2">
-            <li><a href="">About</a></li>
+            <li><a href="">À propos</a></li>
             <li><a href="">Contact</a></li>
             <li><a href="">Faq</a></li>
             <li><a href="">Page 404</a></li>
@@ -105,32 +105,38 @@
     <div class="details container">
       <div class="left">
         <div class="main">
-          <img src="./images/product1.jpg" alt="" />
+          <img src="./images/" alt="" />
         </div>
         <div class="thumbnails">
           <div class="thumbnail">
-            <img src="./images/product2.jpg" alt="" />
+            <img src="./images/" alt="" />
           </div>
           <div class="thumbnail">
-            <img src="./images/product3.jpg" alt="" />
+            <img src="./images/" alt="" />
           </div>
           <div class="thumbnail">
-            <img src="./images/product4.jpg" alt="" />
+            <img src="./images/" alt="" />
           </div>
           <div class="thumbnail">
-            <img src="./images/product5.jpg" alt="" />
+            <img src="./images/" alt="" />
+          </div>
+          <div class="thumbnail">
+            <img src="./images/" alt="" />
+          </div>
+          <div class="thumbnail">
+            <img src="./images/" alt="" />
           </div>
         </div>
       </div>
       <div class="right">
-        <span>Home/T-shirt</span>
-        <h1>Bambi Print Mini Backpack</h1>
-        <div class="price">$50</div>
+        <span>Domicile/....</span>
+        <h1>....</h1>
+        <div class="price">... fcfa</div>
         <form>
           <div>
             <select>
               <option value="Select Size" selected disabled>
-                Select Size
+                sélectionner la taille
               </option>
               <option value="1">32</option>
               <option value="2">42</option>
@@ -145,7 +151,7 @@
           <input type="text" placeholder="1" />
           <a href="cart.html" class="addCart">Add To Cart</a>
         </form>
-        <h3>Product Detail</h3>
+        <h3>DÉTAIL DU PRODUIT</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero minima
           delectus nulla voluptates nesciunt quidem laudantium, quisquam
@@ -159,8 +165,8 @@
 
   <section class="section related-products">
     <div class="title">
-      <h2>Related Products</h2>
-      <span>Select from the premium product brands and save plenty money</span>
+      <h2>Produits connexes</h2>
+      <span>Choisissez parmi les marques de produits haut de gamme et économisez beaucoup d’argent</span>
     </div>
     <div class="product-layout container">
       <div class="product">
@@ -251,48 +257,48 @@
     <div class="container">
       <div class="footer-container">
         <div class="footer-center">
-          <h3>EXTRAS</h3>
-          <a href="#">Brands</a>
-          <a href="#">Gift Certificates</a>
-          <a href="#">Affiliate</a>
-          <a href="#">Specials</a>
-          <a href="#">Site Map</a>
+          <h3>SUPPLÉMENTS</h3>
+          <a href="#">les partenaires</a>
+          <a href="#">Certificats-cadeaux</a>
+          <a href="#">Affilier</a>
+          <a href="#">Promotions</a>
+          <a href="#">Plan du site</a>
         </div>
         <div class="footer-center">
           <h3>INFORMATION</h3>
-          <a href="#">About Us</a>
-          <a href="#">Privacy Policy</a>
-          <a href="#">Terms & Conditions</a>
-          <a href="#">Contact Us</a>
-          <a href="#">Site Map</a>
+          <a href="#">À propos de nous</a>
+          <a href="#">Politique de confidentialité</a>
+          <a href="#">termes et conditions</a>
+          <a href="#">Nous contacter</a>
+          <a href="#">Plan du site</a>
         </div>
         <div class="footer-center">
-          <h3>MY ACCOUNT</h3>
-          <a href="#">My Account</a>
-          <a href="#">Order History</a>
-          <a href="#">Wish List</a>
-          <a href="#">Newsletter</a>
-          <a href="#">Returns</a>
+          <h3>MON COMPTE</h3>
+          <a href="#">MON COMPTE</a>
+          <a href="#">Historique des commandes</a>
+          <a href="#">Liste de souhaits</a>
+          <a href="#">Bulletin</a>
+          <a href="#">Retour</a>
         </div>
         <div class="footer-center">
-          <h3>CONTACT US</h3>
+          <h3>CONTACTER-NOUS</h3>
           <div>
             <span>
               <i class="fas fa-map-marker-alt"></i>
             </span>
-            42 Dream House, Dreammy street, 7131 Dreamville, USA
+            JELMPB, 724R+2P Abidjan, COTE D'IVOIRE
           </div>
           <div>
             <span>
               <i class="far fa-envelope"></i>
             </span>
-            company@gmail.com
+            JELMPB-Shop@gmail.com
           </div>
           <div>
             <span>
               <i class="fas fa-phone"></i>
             </span>
-            456-456-4512
+            +225 bla bla bla
           </div>
           <div class="payment-methods">
             <img src="./images/payment.png" alt="">
