--- a/cart plante.html
+++ b/cart plante.html
@@ -113,7 +113,7 @@
         <tr>
           <td>
             <div class="cart-info">
-              <img src="./images/trousse.jpg" alt="" />
+              <img src="./images/plante.png" alt="" />
               <div>
                 <p>Trousse Réciclable</p>
                 <span>Price: 500.00 fcfa</span>
