--- a/trousse.html
+++ b/trousse.html
@@ -105,7 +105,7 @@
     <div class="details container">
       <div class="left">
         <div class="main">
-          <img src="./images/trousse.jpg" alt="" />
+          <img src="./images/trousse.png" alt="" />
         </div>
         <div class="thumbnails">
           <div class="thumbnail">
@@ -146,7 +146,7 @@
         </form>
 
         <form class="form">
-          <a href="cart trousse.html" class="addCart">Add To Cart</a>
+          <a href="cart trousse.html" class="addCart">Ajouter au panier</a>
         </form>
         <h3>DÉTAIL DU PRODUIT</h3>
         <p>
@@ -168,9 +168,9 @@
     <div class="product-layout container">
       <div class="product">
         <div class="img-container">
-          <img src="./images/product1.jpg" alt="" />
+          <img src="./images/cache nez.jpg" alt="" />
           <div class="addCart">
-            <i class="fas fa-shopping-cart"></i>
+            <a href="cache nez.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -180,17 +180,19 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Bambi Print Mini Backpack</a>
+          <a href="">Cache Nez (fille & garçon)</a>
           <div class="price">
-            <span>$150</span>
+            <span>250 fcfa</span>
+            <span class="cancel">500 fcfa</span>
           </div>
         </div>
       </div>
+
       <div class="product">
         <div class="img-container">
-          <img src="./images/product2.jpg" alt="" />
+          <img src="./images/savon liquide.jpg" alt="" />
           <div class="addCart">
-            <i class="fas fa-shopping-cart"></i>
+            <a href="savon liquide.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -200,17 +202,18 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Bambi Print Mini Backpack</a>
+          <a href="">Savon liquide</a>
           <div class="price">
-            <span>$150</span>
+            <span>500 fcfa</span>
           </div>
         </div>
       </div>
+
       <div class="product">
         <div class="img-container">
-          <img src="./images/product3.jpg" alt="" />
+          <img src="./images/oeufs africain.jpg" alt="" />
           <div class="addCart">
-            <i class="fas fa-shopping-cart"></i>
+            <a href="oeufs africain.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -220,17 +223,19 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Bambi Print Mini Backpack</a>
+          <a href="">Oeufs Africain</a>
           <div class="price">
-            <span>$150</span>
+            <span>150 fcfa</span>
+            <span class="cancel">200 fcfa</span>
           </div>
         </div>
       </div>
+
       <div class="product">
         <div class="img-container">
-          <img src="./images/product4.jpg" alt="" />
+          <img src="./images/pavet.jpg" alt="" />
           <div class="addCart">
-            <i class="fas fa-shopping-cart"></i>
+            <a href="pavet.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -240,9 +245,9 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Bambi Print Mini Backpack</a>
+          <a href="">Pavet Reciclable</a>
           <div class="price">
-            <span>$150</span>
+            <span>5000 fcfa/km°2</span>
           </div>
         </div>
       </div>
