--- a/cart trousse.html
+++ b/cart trousse.html
@@ -113,7 +113,7 @@
         <tr>
           <td>
             <div class="cart-info">
-              <img src="./images/product1.jpg" alt="" />
+              <img src="./images/trousse.png" alt="" />
               <div>
                 <p>Trousse Réciclable</p>
                 <span>Price: 500.00 fcfa</span>
