--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="img-container">
           <img src="./images/cache nez.jpg" alt="" />
           <div class="addCart">
-            <a href="productDetails 1.html"><i class="fas fa-shopping-cart"></i></a>
+            <a href="cache nez.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -229,7 +229,7 @@
         <div class="img-container">
           <img src="./images/savon liquide.jpg" alt="" />
           <div class="addCart">
-            <a href="productDetails.html" class="section-2"><i class="fas fa-shopping-cart"></i></a>
+            <a href="savon liquide.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -250,7 +250,7 @@
         <div class="img-container">
           <img src="./images/oeufs africain.jpg" alt="" />
           <div class="addCart">
-            <a href="productDetails.html" class="section-3"><i class="fas fa-shopping-cart"></i></a>
+            <a href="oeufs africain.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -272,7 +272,7 @@
         <div class="img-container">
           <img src="./images/pavet.jpg" alt="" />
           <div class="addCart">
-            <a href="productDetails.html" class="section-4"><i class="fas fa-shopping-cart"></i></a>
+            <a href="pavet.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -293,7 +293,7 @@
         <div class="img-container">
           <img src="./images/plante.jpg" alt="" />
           <div class="addCart">
-            <a href="productDetails.html" class=""><i class="fas fa-shopping-cart"></i></a>
+            <a href="plante.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -315,7 +315,7 @@
         <div class="img-container">
           <img src="./images/aracchide.jpg" alt="" />
           <div class="addCart">
-            <i class="fas fa-shopping-cart"></i>
+            <a href="arachide.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -338,7 +338,7 @@
         <div class="img-container">
           <img src="./images/feuilles d'oignon.jpg" alt="" />
           <div class="addCart">
-            <i class="fas fa-shopping-cart"></i>
+            <a href="feuilles d'oignon.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
