--- a/trousse.html
+++ b/trousse.html
@@ -136,7 +136,7 @@
           <div>
             <select>
               <option value="Select Size" selected disabled>
-                sélectionner la taille
+                sélectionner la forme
               </option>
               <option value="1">moyenne</option>
               <option value="2">grande</option>
