--- a/pavet.html
+++ b/pavet.html
@@ -105,7 +105,7 @@
     <div class="details container">
       <div class="left">
         <div class="main">
-          <img src="./images/" alt="" />
+          <img src="./images/pavet.png" alt="" />
         </div>
         <div class="thumbnails">
           <div class="thumbnail">
@@ -129,27 +129,24 @@
         </div>
       </div>
       <div class="right">
-        <span>Domicile/....</span>
-        <h1>....</h1>
-        <div class="price">... fcfa</div>
+        <span>Domicile/Pavet</span>
+        <h1>Pavet Reciclable</h1>
+        <div class="price">5000 fcfa/km°2</div>
         <form>
           <div>
             <select>
               <option value="Select Size" selected disabled>
-                sélectionner la taille
+                sélectionner l'unité de mesure
               </option>
-              <option value="1">32</option>
-              <option value="2">42</option>
-              <option value="3">52</option>
-              <option value="4">62</option>
+              <option value="1">m°2</option>
+              <option value="2">km°2</option>
             </select>
             <span><i class="fas fa-chevron-down"></i></span>
           </div>
         </form>
 
         <form class="form">
-          <input type="text" placeholder="1" />
-          <a href="cart.html" class="addCart">Add To Cart</a>
+          <a href="cart.html" class="addCart">Ajouter au panier</a>
         </form>
         <h3>DÉTAIL DU PRODUIT</h3>
         <p>
@@ -171,9 +168,9 @@
     <div class="product-layout container">
       <div class="product">
         <div class="img-container">
-          <img src="./images/product1.jpg" alt="" />
+          <img src="./images/savon liquide.jpg" alt="" />
           <div class="addCart">
-            <i class="fas fa-shopping-cart"></i>
+            <a href="savon liquide.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -183,17 +180,39 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Bambi Print Mini Backpack</a>
+          <a href="">Savon liquide</a>
           <div class="price">
-            <span>$150</span>
+            <span>500 fcfa</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="product">
+        <div class="img-container">
+          <img src="./images/oeufs africain.jpg" alt="" />
+          <div class="addCart">
+            <a href="oeufs africain.html"><i class="fas fa-shopping-cart"></i></a>
+          </div>
+
+          <ul class="side-icons">
+            <span><i class="fas fa-search"></i></span>
+            <span><i class="far fa-heart"></i></span>
+            <span><i class="fas fa-sliders-h"></i></span>
+          </ul>
+        </div>
+        <div class="bottom">
+          <a href="">Oeufs Africain</a>
+          <div class="price">
+            <span>150 fcfa</span>
+            <span class="cancel">200 fcfa</span>
           </div>
         </div>
       </div>
       <div class="product">
         <div class="img-container">
-          <img src="./images/product2.jpg" alt="" />
+          <img src="./images/plante.jpg" alt="" />
           <div class="addCart">
-            <i class="fas fa-shopping-cart"></i>
+            <a href="plante.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -203,17 +222,19 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Bambi Print Mini Backpack</a>
+          <a href="">Plante (fleur & potager etc...)</a>
+
           <div class="price">
-            <span>$150</span>
+            <span>5000 fcfa/km°2</span>
           </div>
         </div>
       </div>
+
       <div class="product">
         <div class="img-container">
-          <img src="./images/product3.jpg" alt="" />
+          <img src="./images/aracchide.jpg" alt="" />
           <div class="addCart">
-            <i class="fas fa-shopping-cart"></i>
+            <a href="arachide.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -223,29 +244,11 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Bambi Print Mini Backpack</a>
-          <div class="price">
-            <span>$150</span>
-          </div>
-        </div>
-      </div>
-      <div class="product">
-        <div class="img-container">
-          <img src="./images/product4.jpg" alt="" />
-          <div class="addCart">
-            <i class="fas fa-shopping-cart"></i>
-          </div>
+          <a href="">Arachide</a>
 
-          <ul class="side-icons">
-            <span><i class="fas fa-search"></i></span>
-            <span><i class="far fa-heart"></i></span>
-            <span><i class="fas fa-sliders-h"></i></span>
-          </ul>
-        </div>
-        <div class="bottom">
-          <a href="">Bambi Print Mini Backpack</a>
           <div class="price">
-            <span>$150</span>
+            <span>100 fcfa/sachet</span>
+            <span class="cancel">200 fcfa/sachet</span>
           </div>
         </div>
       </div>
