--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Pavet Reciclable</a>
+          <a href="">Pavet Réciclable</a>
           <div class="price">
             <span>5000 fcfa/km°2</span>
           </div>
