--- a/pavet.html
+++ b/pavet.html
@@ -130,7 +130,7 @@
       </div>
       <div class="right">
         <span>Domicile/Pavet</span>
-        <h1>Pavet Reciclable</h1>
+        <h1>Pavet Réciclable</h1>
         <div class="price">5000 fcfa/km°2</div>
         <form>
           <div>
