--- a/products next-1.html
+++ b/products next-1.html
@@ -548,7 +548,8 @@
         <ul class="pagination">
           <a href="products.html"><span>1</span></a>
           <a href="products 2.html"><span>2</span></a>
-          <a href="products next-1.html"><span class="icon">››</span></a>
+          <a href="products next-1.html"><span>3</span></a>
+          <a href="products 4.html"><span class="icon">››</span></a>
           <a href="products next-2.html"><span class="last">Last »</span></a>
         </ul>
       </div>
