--- a/arachide.html
+++ b/arachide.html
@@ -105,7 +105,7 @@
     <div class="details container">
       <div class="left">
         <div class="main">
-          <img src="./images/" alt="" />
+          <img src="./images/aracchide.png" alt="" />
         </div>
         <div class="thumbnails">
           <div class="thumbnail">
@@ -129,27 +129,34 @@
         </div>
       </div>
       <div class="right">
-        <span>Domicile/....</span>
-        <h1>....</h1>
-        <div class="price">... fcfa</div>
+        <span>Domicile/Arachide</span>
+        <h1>Arachide</h1>
+        <div class="price">200 fcfa/sachet</div>
         <form>
           <div>
             <select>
               <option value="Select Size" selected disabled>
-                sélectionner la taille
+                sélectionner le kilo
               </option>
-              <option value="1">32</option>
-              <option value="2">42</option>
-              <option value="3">52</option>
-              <option value="4">62</option>
+              <option value="1">10</option>
+              <option value="2">15</option>
+              <option value="3">20</option>
+              <option value="4">25</option>
+              <option value="1">30</option>
+              <option value="2">35</option>
+              <option value="3">40</option>
+              <option value="4">45</option>
+              <option value="1">50</option>
+              <option value="2">75</option>
+              <option value="3">100</option>
+              <option value="4">125</option>
             </select>
             <span><i class="fas fa-chevron-down"></i></span>
           </div>
         </form>
 
         <form class="form">
-          <input type="text" placeholder="1" />
-          <a href="cart.html" class="addCart">Add To Cart</a>
+          <a href="cart.html" class="addCart">Ajouter au panier</a>
         </form>
         <h3>DÉTAIL DU PRODUIT</h3>
         <p>
@@ -171,9 +178,9 @@
     <div class="product-layout container">
       <div class="product">
         <div class="img-container">
-          <img src="./images/product1.jpg" alt="" />
+          <img src="./images/plante.jpg" alt="" />
           <div class="addCart">
-            <i class="fas fa-shopping-cart"></i>
+            <a href="plante.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -183,17 +190,18 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Bambi Print Mini Backpack</a>
+          <a href="">Plante (fleur & potager etc...)</a>
+
           <div class="price">
-            <span>$150</span>
+            <span>5000 fcfa/km°2</span>
           </div>
         </div>
       </div>
       <div class="product">
         <div class="img-container">
-          <img src="./images/product2.jpg" alt="" />
+          <img src="./images/aracchide.jpg" alt="" />
           <div class="addCart">
-            <i class="fas fa-shopping-cart"></i>
+            <a href="arachide.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -203,17 +211,19 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Bambi Print Mini Backpack</a>
+          <a href="">Arachide</a>
+
           <div class="price">
-            <span>$150</span>
+            <span>100 fcfa/sachet</span>
+            <span class="cancel">200 fcfa/sachet</span>
           </div>
         </div>
       </div>
       <div class="product">
         <div class="img-container">
-          <img src="./images/product3.jpg" alt="" />
+          <img src="./images/trousse.jpg" alt="" />
           <div class="addCart">
-            <i class="fas fa-shopping-cart"></i>
+            <a href="trousse.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -223,17 +233,17 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Bambi Print Mini Backpack</a>
+          <a href="">Trousse Réciclable</a>
           <div class="price">
-            <span>$150</span>
+            <span>500 fcfa</span>
           </div>
         </div>
       </div>
       <div class="product">
         <div class="img-container">
-          <img src="./images/product4.jpg" alt="" />
+          <img src="./images/oeufs africain.jpg" alt="" />
           <div class="addCart">
-            <i class="fas fa-shopping-cart"></i>
+            <a href="oeufs africain.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -243,14 +253,14 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Bambi Print Mini Backpack</a>
+          <a href="">Oeufs Africain</a>
           <div class="price">
-            <span>$150</span>
+            <span>150 fcfa</span>
+            <span class="cancel">200 fcfa</span>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
   <!-- Footer -->
   <footer id="footer" class="section footer">
