--- a/pavet.html
+++ b/pavet.html
@@ -136,7 +136,7 @@
           <div>
             <select>
               <option value="Select Size" selected disabled>
-                sélectionner l'unité de mesure
+                l'unité de mesure
               </option>
               <option value="1">m°2</option>
               <option value="2">km°2</option>
