--- a/arachide.html
+++ b/arachide.html
@@ -156,7 +156,7 @@
         </form>
 
         <form class="form">
-          <a href="cart.html" class="addCart">Ajouter au panier</a>
+          <a href="cart arachide.html" class="addCart">Ajouter au panier</a>
         </form>
         <h3>DÉTAIL DU PRODUIT</h3>
         <p>
