--- a/cache nez.html
+++ b/cache nez.html
@@ -147,7 +147,7 @@
         </form>
 
         <form class="form">
-          <a href="cart.html" class="addCart">Ajouter au panier</a>
+          <a href="cart cache nez.html" class="addCart">Ajouter au panier</a>
         </form>
         <h3>DÉTAIL DU PRODUIT</h3>
         <p>
