--- a/oeufs africain.html
+++ b/oeufs africain.html
@@ -148,7 +148,7 @@
         </form>
 
         <form class="form">
-          <a href="cart.html" class="addCart">Ajouter au panier</a>
+          <a href="cart oeufs africains.html" class="addCart">Ajouter au panier</a>
         </form>
         <h3>DÉTAIL DU PRODUIT</h3>
         <p>
