--- a/pavet.html
+++ b/pavet.html
@@ -146,7 +146,7 @@
         </form>
 
         <form class="form">
-          <a href="cart.html" class="addCart">Ajouter au panier</a>
+          <a href="cart pavet.html" class="addCart">Ajouter au panier</a>
         </form>
         <h3>DÉTAIL DU PRODUIT</h3>
         <p>
