--- a/products 4.html
+++ b/products 4.html
@@ -547,11 +547,11 @@
         <!-- PAGINATION -->
         <ul class="pagination">
           <a href="products.html"><span>1</span></a>
-          <a href="products 1.html"><span>2</span></a>
-          <a href="products next-1.html"><span>3</span></a>
+          <a href="products 2.html"><span>2</span></a>
+          <a href="products 3.html"><span>3</span></a>
           <a href="products 4.html"><span>4</span></a>
-          <a href="products next-2.html"><span class="icon">››</span></a>
-          <a href="products next-2.html"><span class="last">Last »</span></a>
+          <a href="products last.html"><span class="icon">››</span></a>
+          <a href="products last.html"><span class="last">Last »</span></a>
         </ul>
       </div>
     </div>
