--- a/products.html
+++ b/products.html
@@ -548,8 +548,8 @@
         <ul class="pagination">
           <a href="products.html"><span>1</span></a>
           <a href="products 2.html"><span>2</span></a>
-          <a href="products next-1.html"><span class="icon">››</span></a>
-          <a href="products next-2.html"><span class="last">Last »</span></a>
+          <a href="products 3.html"><span class="icon">››</span></a>
+          <a href="products last.html"><span class="last">Last »</span></a>
         </ul>
       </div>
     </div>
