--- a/cart oeufs africains.html
+++ b/cart oeufs africains.html
@@ -86,7 +86,7 @@
               <li><a href="">À propos</a></li>
               <li><a href="">Contact</a></li>
               <li><a href="">Faq</a></li>
-              <li><a href="">Page 404</a></li>
+              <li><a href="page 404">Page 404</a></li>
             </ul>
           </li>
           <!-- icons -->
@@ -113,17 +113,17 @@
         <tr>
           <td>
             <div class="cart-info">
-              <img src="./images/product1.jpg" alt="" />
+              <img src="./images/oeufs africain.png" alt="" />
               <div>
-                <p>Trousse Réciclable</p>
-                <span>Price: 500.00 fcfa</span>
+                <p>Oeufs Africains</p>
+                <span>Price: 150.00 fcfa</span>
                 <br />
-                <a href="trousse.html">remove</a>
+                <a href="oeufs africain.html">remove</a>
               </div>
             </div>
           </td>
           <td><input type="number" class="" value="1" min="1" /></td>
-          <td>500.00 fcfa</td>
+          <td>150.00 fcfa</td>
         </tr>
       </table>
 
@@ -131,11 +131,11 @@
         <table>
           <tr>
             <td>sous-total</td>
-            <td>500 fcfa</td>
+            <td>150 fcfa</td>
           </tr>
           <tr>
             <td>Total</td>
-            <td>500 fcfa</td>
+            <td>150 fcfa</td>
           </tr>
         </table>
         <a href="index.html" class="checkout btn">Passer à la caisse</a>
