--- a/cart plante.html
+++ b/cart plante.html
@@ -86,7 +86,7 @@
               <li><a href="">À propos</a></li>
               <li><a href="">Contact</a></li>
               <li><a href="">Faq</a></li>
-              <li><a href="">Page 404</a></li>
+              <li><a href="page 404">Page 404</a></li>
             </ul>
           </li>
           <!-- icons -->
@@ -115,15 +115,15 @@
             <div class="cart-info">
               <img src="./images/plante.png" alt="" />
               <div>
-                <p>Trousse Réciclable</p>
-                <span>Price: 500.00 fcfa</span>
+                <p>Plante (fleur & potager etc...)</p>
+                <span>Price: 5000.00 fcfa/km°2</span>
                 <br />
-                <a href="trousse.html">remove</a>
+                <a href="plante.html">remove</a>
               </div>
             </div>
           </td>
           <td><input type="number" class="" value="1" min="1" /></td>
-          <td>500.00 fcfa</td>
+          <td>5000.00 fcfa/km°2</td>
         </tr>
       </table>
 
@@ -131,11 +131,11 @@
         <table>
           <tr>
             <td>sous-total</td>
-            <td>500 fcfa</td>
+            <td>5000 fcfa/km°2</td>
           </tr>
           <tr>
             <td>Total</td>
-            <td>500 fcfa</td>
+            <td>5000 fcfa/km°2</td>
           </tr>
         </table>
         <a href="index.html" class="checkout btn">Passer à la caisse</a>
