--- a/cart savon liquide.html
+++ b/cart savon liquide.html
@@ -86,7 +86,7 @@
               <li><a href="">À propos</a></li>
               <li><a href="">Contact</a></li>
               <li><a href="">Faq</a></li>
-              <li><a href="">Page 404</a></li>
+              <li><a href="page 404">Page 404</a></li>
             </ul>
           </li>
           <!-- icons -->
@@ -113,12 +113,12 @@
         <tr>
           <td>
             <div class="cart-info">
-              <img src="./images/product1.jpg" alt="" />
+              <img src="./images/savon liquide.png" alt="" />
               <div>
-                <p>Trousse Réciclable</p>
+                <p>Savon Liquide</p>
                 <span>Price: 500.00 fcfa</span>
                 <br />
-                <a href="trousse.html">remove</a>
+                <a href="savon liquide.html">remove</a>
               </div>
             </div>
           </td>
