--- a/cart trousse.html
+++ b/cart trousse.html
@@ -86,7 +86,7 @@
               <li><a href="">À propos</a></li>
               <li><a href="">Contact</a></li>
               <li><a href="">Faq</a></li>
-              <li><a href="">Page 404</a></li>
+              <li><a href="page 404">Page 404</a></li>
             </ul>
           </li>
           <!-- icons -->
