--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
         <div class="content left">
           <span>Ventes exclusives</span>
           <h3>Collections de saison</h3>
-          <a href="">Voir la collection</a>
+          <a href="products.html">Voir la collection</a>
         </div>
       </div>
       <div class="item">
