--- a/arachide.html
+++ b/arachide.html
@@ -19,7 +19,7 @@
   <!-- Navigation -->
   <nav class="nav">
     <div class="wrapper container">
-      <div class="logo"><a href="">BLOGSHOP</a></div>
+      <div class="logo"><a href="">JELMPB-Shop</a></div>
       <ul class="nav-list">
         <div class="top">
           <label for="" class="btn close-btn"><i class="fas fa-times"></i></label>
@@ -84,7 +84,7 @@
             <li><a href="">À propos</a></li>
             <li><a href="">Contact</a></li>
             <li><a href="">Faq</a></li>
-            <li><a href="">Page 404</a></li>
+            <li><a href="page 404">Page 404</a></li>
           </ul>
         </li>
         <!-- icons -->
