--- a/cart arachide.html
+++ b/cart arachide.html
@@ -113,17 +113,17 @@
         <tr>
           <td>
             <div class="cart-info">
-              <img src="./images/product1.jpg" alt="" />
+              <img src="./images/aracchide.png" alt="" />
               <div>
-                <p>Trousse Réciclable</p>
-                <span>Price: 500.00 fcfa</span>
+                <p>Arachide</p>
+                <span>Price: 200.00 fcfa/sachet</span>
                 <br />
-                <a href="trousse.html">remove</a>
+                <a href="arachide.html">remove</a>
               </div>
             </div>
           </td>
           <td><input type="number" class="" value="1" min="1" /></td>
-          <td>500.00 fcfa</td>
+          <td>200.00 fcfa/sachet</td>
         </tr>
       </table>
 
@@ -131,11 +131,11 @@
         <table>
           <tr>
             <td>sous-total</td>
-            <td>500 fcfa</td>
+            <td>200 fcfa/sachet</td>
           </tr>
           <tr>
             <td>Total</td>
-            <td>500 fcfa</td>
+            <td>200 fcfa/sachet</td>
           </tr>
         </table>
         <a href="index.html" class="checkout btn">Passer à la caisse</a>
